--- a/multi-stage-multi-agent/Jenkinsfile
+++ b/multi-stage-multi-agent/Jenkinsfile
@@ -1,21 +1,26 @@
 pipeline {
-  agent none
-  stages {
-    stage('Back-end') {
-      agent {
-        docker { image 'maven:3.8.1-adoptopenjdk-11' }
-      }
-      steps {
-        sh 'mvn --version'
-      }
+    agent any
+
+    stages {
+        stage('Check Version') {
+            steps {
+                script {
+                    // Get and print the Node.js version
+                    def nodeVersion = sh(script: 'node --version', returnStdout: true).trim()
+                    echo "Node.js Version: $nodeVersion"
+                }
+            }
+        }
     }
-    stage('Front-end') {
-      agent {
-        docker { image 'node:16-alpine' }
-      }
-      steps {
-        docker system df
-      }
+
+    post {
+        success {
+            // Actions to perform if the pipeline succeeds
+            echo 'Version check succeeded! Triggering further actions...'
+        }
+        failure {
+            // Actions to perform if the pipeline fails
+            echo 'Version check failed. Notify or take appropriate action.'
+        }
     }
-  }
 }
